Fixed dashboard menu style for new jquery ui css, fixed overflow issues. Fixes #288 #414

--- a/priv/dev/static/styles/dderl.css
+++ b/priv/dev/static/styles/dderl.css
@@ -757,24 +757,23 @@ ul.dashboard.dropdown li:hover{
     border-bottom-right-radius: 0px !important;
 }
 
-.inputText, .inputTextDefault, .inputTextToEdit {
-    background: #e6e6e6;
-    padding-top: 0px;
-    width: 146px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-right: 2px;
-    padding-left: 2px;
-    border-bottom-width: 0px;
-}
-.inputTextDefault {
-    background: #ffffff;
-}
-.inputTextToEdit {
-    width: 120px;
+input.inputTextDefault,
+input.inputTextToEdit,
+input.inputText {
+    width: 125px;
+    padding: 2px;
     font-family: Verdana,Arial,sans-serif;
     font-size: 1.1em;
+    border-bottom-width: 0px;
 }
+
+input.inputTextDefault,
+input.inputTextToEdit {
+    width: 120px;
+    background-color: #FFFFFF !important;
+    background-image: none !important;    
+}
+
 .right {
     float: right;
 }
